[feat] 增加 B02-12 取得工作區邀請資料
